# c-system-abstraction-component-gui.release

./: .hgignore  .mtn-ignore  CMakeLists.txt  CMakeLists.txt.all  Externals.cmake  Makefile.all  Makefile.bag  howto.compile  merge_footer  ming_all.bat  mk  mkgl.bat  mknodb.bat  mkrelstat.bat  mkstat_noopt.bat  mkstat_noopt_nogui.bat  mkstatic.bat  read.this  vs10_all.bat  watcom.bat  watcom_all.bat
binary/: CMakeLists.txt
binary/deploy/: CMakeLists.txt  deploy.cm.c
data/: CMakeLists.txt  Makefile  interface.conf
include/: CMakeLists.txt  classic_image.h  colordef.h  configscript.h  construct.h  controls.h  deadstart.h  docomatic.h  filedotnet.h  filemon.h  filesys.h  final_types.h  fractions.h  ft2build.h  http.h  image.h  keybrd.h  loadsock.h  logging.h  menuflags.h  msgclient.h  msgprotocol.h  msgserver.h  network.h  procreg.h  psi.h  pssql.h  render.h  sack_types.h  sackcomm.h  service_hook.h  sha1.h  sharemem.h  signed_unsigned_comparisons.h  skeleton.h  sqlgetoption.h  sqloptint.h  stdhdrs.h  system.h  timers.h  (+4 more)
include/imglib/: fontstruct.h  imagestruct.h
include/jpeg/: jerror.h  jmorecfg.h
include/nasm/: pmw.bat
include/psi/: buttons.h  console.h  controls.h  edit.h  namespaces.h  shadewell.h  slider.h
include/vidlib/: keydef.h  vidstruc.h
sack/src/displaylib/: CMakeLists.txt  Makefile  Makefile.display2.bag  calibrate.c  client.h  display_image_server.c  display_loader.c  display_video.c  displaystruc.h  fb_sd_lmouse.c  ghdr.h  global.h
sack/src/displaylib/calibrate/: Makefile
src/InterShell/: CMakeLists.txt  animation.h  banner_button.c  fonts.c  intershell_export.h  intershell_local.h  intershell_registry.h  intershell_security.h  loadsave.c  main.c  make1  menu_listbox.h  menu_real_button.h  page_dialog.c  pages.c  pages.h  stop.c  text_label.c
src/InterShell/any_control/: Makefile
src/InterShell/calendar/: CMakeLists.txt  DateButton.c  Makefile
src/InterShell/clock/: CMakeLists.txt  Makefile  clock_addon.c
src/InterShell/clock/frames/: Clock_Properties.isFrame
src/InterShell/deploy/: CMakeLists.txt  deploy.cm.c
src/InterShell/extract_config/: Makefile  extract.c
src/InterShell/frames/: CMakeLists.txt  EditBannerMessage.isFrame  EditGenericButton.isframe  ListboxProperty.isframe  MilkPageProperty.isFrame  fbi_gui_property.isframe  font_preset_property.isframe  user_stat_prop.isframe
src/InterShell/graph/: CMakeLists.txt  linegraph.c  network_monitor.vs10.vcxproj  network_monitor.vs10.vcxproj.filters  packet_stat.c
src/InterShell/images/: CMakeLists.txt
src/InterShell/set_config/: CMakeLists.txt  Makefile  set_config.c
src/InterShell/shell/: CMakeLists.txt
src/InterShell/stop/: CMakeLists.txt
src/InterShell/tasks/: CMakeLists.txt  tasks.c  tasks.h
src/InterShell/tasks/frames/: CMakeLists.txt  task.isframe
src/InterShell/video_player/: Makefile  vplayer.c
src/InterShell/video_player/resources/: test.bat
src/InterShell/vlc_hook/: CMakeLists.txt  makefile  vlc_interface.c  vlc_test.c  vlcint.h
src/InterShell/vlc_hook/intershell/: CMakeLists.txt  Makefile  vlc_button.c
src/InterShell/widgets/: CMakeLists.txt  Makefile  Makefile.widgets
src/InterShell/widgets/banner/: banner.c  banner2.c
src/InterShell/widgets/include/: banner.h  buttons.h  keypad.h
src/InterShell/widgets/keypad/: Makefile  accum.c  buttons.c  keypad.c  keypad_control.c
src/InterShell/windows_shell/: CMakeLists.txt  Makefile
src/InterShell/wshell/: CMakeLists.txt
src/SQLlib/testsql/: CMakeLists.txt  Makefile  sqlcmd.c  testparse.c
src/apps/video_link/: CMakeLists.txt  bdata_proxy_task.c  bdata_tcp_relay.c  db.c  db.h  dvdactive.c  link_events.h  liscense.txt  mediaactive.c  network_events.c  server.h  statebuttons.c  statebuttons.h  stateserver.c  video_mux.c  vlc_launcher.c
src/apps/video_link/config/: binglink.milk.windows.config
src/apps/video_link/docs/: NewJumboLinkControl.doc
src/apps/video_link/frames/: Edit_DVD_Active_For_Link_Controller.isFrame  Edit_Link_Button.Frame
src/apps/video_link/ianson/: video_ctrl.h
src/apps/video_link/install/: CMakeLists.txt
src/apps/video_link/resource/: guibak.ini  vlcrc
src/apps/video_link/scripts/: asound.state.nosound  asound.state.sound  bdata_control.Makefile  blctrl  boulder  pisc  (+46 more)
src/intershell/: CMakeLists.txt  animation.c  animation_plugin.c  banner_button.c  fileopen.c  fileopen.h  fonts.c  fonts.h  intershell-host.vc9.vcproj  intershell-host.vs10.vcxproj  intershell-host.vs10.vcxproj.filters  intershell.core.vc8.vcproj  intershell.core.vcproj  intershell.core.vs10.vcxproj  intershell.core.vs10.vcxproj.filters  intershell.vcproj  intershell_button.h  intershell_export.h  intershell_local.h  intershell_plugins.c  intershell_registry.h  loadsave.c  loadsave.h  macros.c  main.c  make1  menu_real_button.h  page_dialog.c  pages.c  pages.h  resname.c  resource.h  security.c  sprites.c  text_label.c  text_label.h
src/intershell/calendar/: Makefile
src/intershell/clock/: CMakeLists.txt  clock.vc9.vcproj  clock.vs10.vcxproj  clock.vs10.vcxproj.filters
src/intershell/dekware/: dekware.vc9.vcproj  dekware.vcproj  solitaire.c
src/intershell/frames/: InterShellPageProperty.isFrame  page_change_property.isframe  page_label_property.isframe  property.isframe
src/intershell/graph/: CMakeLists.txt  connect_stat.c  linegraph.c  network_monitor.vcproj  packet_stat.c
src/intershell/images/: CMakeLists.txt
src/intershell/shell/: CMakeLists.txt
src/intershell/tasks/: CMakeLists.txt  Makefile  tasks.c  tasks.h  tasks.vcproj
src/intershell/vlc_hook/: CMakeLists.txt  makefile  vlc_interface.c  vlc_test.c  vlcint.h
src/intershell/widgets/: CMakeLists.txt  Makefile.widgets  sack.widgets.vc9.vcproj  sack.widgets.vcproj  sack.widgets.vs10.vcxproj  sack.widgets.vs10.vcxproj.filters
src/intershell/windows_shell/: CMakeLists.txt  shell.c
src/intershell/wshell/: CMakeLists.txt
src/msgsvr/server/: CMakeLists.txt  server2.c  server3.c
src/msgsvr/testdisplay/: CMakeLists.txt  Makefile  mkd.bat  test.c  test2.c  test3.c  test4.c
src/netlib/proxy/: CMakeLists.txt  Makefile  proxy.c
(+1244 files in other folders)
